--- a/app/views/18/pre-sentence-report/write-sentencing-proposal.html
+++ b/app/views/18/pre-sentence-report/write-sentencing-proposal.html
@@ -30,7 +30,7 @@
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="culpability-and-risk">
-                Culpability and risk</a>
+                Risk analysis</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="consider-sentence-components">
@@ -114,7 +114,7 @@
                   <div class="govuk-accordion__section-header">
                     <h3 class="govuk-accordion__section-heading">
                       <span class="govuk-accordion__section-button" id="accordion-default-heading-1">
-                        Review notes on culpability and risk to others
+                        Review notes on Risk analysis to others
                       </span>
                     </h3>
                   </div>
