--- a/app/views/18/pre-sentence-report/sources-of-information.html
+++ b/app/views/18/pre-sentence-report/sources-of-information.html
@@ -30,7 +30,7 @@
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="culpability-and-risk">
-                Culpability and risk</a>
+                Risk analysis</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="consider-sentence-components">
