Updates to sentencing proposal
- rename page
- update routes
- add in new questions and save answers
- estimate size of boxes

--- a/app/views/18/pre-sentence-report/offence-analysis.html
+++ b/app/views/18/pre-sentence-report/offence-analysis.html
@@ -36,7 +36,7 @@
                 Consider sentence components</a>
             </li>
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="write-sentencing-proposal">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="sentencing-proposal">
                 Write sentencing proposal</a>
             </li>
             <li class="app-subnav__section-item">
