--- a/app/views/18/pre-sentence-report/preview-report.html
+++ b/app/views/18/pre-sentence-report/preview-report.html
@@ -37,7 +37,7 @@
                 Consider sentence components</a>
             </li>
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="write-sentencing-proposal">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="sentencing-proposal">
                 Write sentencing proposal</a>
             </li><li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="sources-of-information">
@@ -399,7 +399,7 @@
                       <div class="govuk-grid-column-full">
                         <h2 class="govuk-heading-m report-heading--purple">Sentencing proposal</h2>
                         <p class="govuk-body">{{data['sentencing-proposal']}}
-                          <br><a class="govuk-link" href="write-sentencing-proposal">Change
+                          <br><a class="govuk-link" href="sentencing-proposal">Change
                             <span class="govuk-visually-hidden">sentencing proposal</span>
                           </a></p>
                       </div>
