sources of information add other button
Add a secondary button to allow adding another
option. This does not have a mini journey hooked
up right now but it can later.

--- a/app/views/18/pre-sentence-report/sources-of-information.html
+++ b/app/views/18/pre-sentence-report/sources-of-information.html
@@ -138,6 +138,10 @@
                         Victim statement
                       </label>
                     </div>
+                    <div class="govuk-checkboxes__divider">or</div>
+                    <button class="govuk-button govuk-button--secondary" data-module="govuk-button" name="addOther" value="addOther">
+                      Add other
+                    </button>
                   </div>
                 </fieldset>
               </div>
