Add proposal page
Added a proposal page near the end of the journey
as they have to have written the report before it
can be summarised.

Using the design most closely aligned to the
purple form design sprint so we can populate all
the boxes.

- added page
- added routing
- added in questions
- need to check guidance with Patrick

--- a/app/views/18/pre-sentence-report/risk-analysis.html
+++ b/app/views/18/pre-sentence-report/risk-analysis.html
@@ -29,7 +29,7 @@
                 Additional behaviours and lifestyle considerations</a>
             </li>
             <li class="app-subnav__section-item app-subnav__section-item--current">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="culpability-and-risk">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="risk-analysis">
                 Risk analysis</a>
             </li>
             <li class="app-subnav__section-item">
@@ -43,6 +43,10 @@
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="sources-of-information">
                 Sources of information</a>
+            </li>
+            <li class="app-subnav__section-item">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="summary-page">
+                Summary page</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="preview-report">
