--- a/app/views/18/pre-sentence-report/preview-report.html
+++ b/app/views/18/pre-sentence-report/preview-report.html
@@ -29,7 +29,7 @@
                 Additional behaviours and lifestyle considerations</a>
             </li>
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="culpability-and-risk">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="risk-analysis">
                 Risk analysis</a>
             </li>
             <li class="app-subnav__section-item">
@@ -42,6 +42,10 @@
             </li><li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="sources-of-information">
                 Sources of information</a>
+            </li>
+            <li class="app-subnav__section-item">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="summary-page">
+                Summary page</a>
             </li>
             <li class="app-subnav__section-item app-subnav__section-item--current">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="preview-report">
@@ -1001,7 +1005,7 @@
                             <tr class="govuk-table__row">
                               <th scope="row" class="govuk-table__header">Culpability:</th>
                               <td class="govuk-table__cell">{{data['defendant-culpability']}}
-                                <br><a class="govuk-link" href="culpability-and-risk">
+                                <br><a class="govuk-link" href="risk-analysis">
                                   Change <span class="govuk-visually-hidden">
                                     culpbaility notes</span></a>
                               </td>
@@ -1014,7 +1018,7 @@
                                 {% else %}
                                   {{data['defendant-known-person-risk']}}
                                 {% endif %}
-                                <br><a class="govuk-link" href="culpability-and-risk">
+                                <br><a class="govuk-link" href="risk-analysis">
                                   Change <span class="govuk-visually-hidden">
                                     Risk of harm to known individuals and partners notes</span></a>
                               </td>
@@ -1027,7 +1031,7 @@
                                 {% else %}
                                   {{data['defendant-children-risk']}}
                                 {% endif %}
-                                <br><a class="govuk-link" href="culpability-and-risk">
+                                <br><a class="govuk-link" href="risk-analysis">
                                   Change <span class="govuk-visually-hidden">
                                     Risk of harm to children notes</span></a>
                               </td>
@@ -1040,7 +1044,7 @@
                                 {% else %}
                                   {{data['defendant-public-risk']}}
                                 {% endif %}
-                                <br><a class="govuk-link" href="culpability-and-risk">
+                                <br><a class="govuk-link" href="risk-analysis">
                                   Change <span class="govuk-visually-hidden">
                                     Risk of harm to others notes</span></a>
                               </td>
@@ -1053,7 +1057,7 @@
                                 {% else %}
                                   {{data['defendant-reconviction-risk']}}
                                 {% endif %}
-                                <br><a class="govuk-link" href="culpability-and-risk">
+                                <br><a class="govuk-link" href="risk-analysis">
                                   Change <span class="govuk-visually-hidden">
                                     Risk of reconviction notes</span></a>
                               </td>
@@ -1066,7 +1070,7 @@
                                 {% else %}
                                   {{data['defendant-self-harm-risk']}}
                                 {% endif %}
-                                <br><a class="govuk-link" href="culpability-and-risk">
+                                <br><a class="govuk-link" href="risk-analysis">
                                   Change <span class="govuk-visually-hidden">
                                     Risk of self harm notes</span></a>
                               </td>
