description of work on index reflects all work

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,7 +17,7 @@
     <ul class="govuk-list govuk-list--bullet">
       <li>
         <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-4118">
-          Increment to v18</a></p>
+          Increment to v18 and apply PIPA changes</a></p>
       </li>
     </ul>
     <h2 class="govuk-heading-m">v17</h2>
