Track work on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,6 +16,13 @@
       Pre-sentence report prototype</a></p>
     <ul class="govuk-list govuk-list--bullet">
       <li>
+        <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-4160">
+          Make preview page work and show all answers from the pre-sentence
+          report. Previously it used the verification report info as a
+          placeholder.</a></p>
+      </li>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>
         <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-4118">
           Increment to v18 and apply PIPA changes</a></p>
       </li>
