--- a/app/views/18/pre-sentence-report/start-page.html
+++ b/app/views/18/pre-sentence-report/start-page.html
@@ -19,7 +19,7 @@
                 <li>generate the final report as a PDF to share with the judiciary</li>
               </ul>
               <div class="nhsuk-do-dont-list">
-                <h3 class="nhsuk-do-dont-list__label">Do</h3>
+                <h2 class="nhsuk-do-dont-list__label">Do</h2>
                 <ul class="nhsuk-list nhsuk-list--tick" role="list">
                   <li>
                     <svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true" width="34" height="34">
@@ -43,7 +43,7 @@
               </div>
               
               <div class="nhsuk-do-dont-list">
-                <h3 class="nhsuk-do-dont-list__label">Don&#39;t</h3>
+                <h2 class="nhsuk-do-dont-list__label">Don&#39;t</h2>
                 <ul class="nhsuk-list nhsuk-list--cross" role="list">
                   <li>
                     <svg class="nhsuk-icon nhsuk-icon__cross" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="34" height="34">
@@ -75,23 +75,30 @@
                   </li>
                 </ul>
               </div>
+              <h2 class="govuk-heading-l">Before you finish your report</h2>
+              <p class="govuk-body">You can start the report at any time to enter information or collate notes.</p>
+              <p class="govuk-body govuk-!-font-weight-bold">You will need to finish all relevant risk assessment tools before you complete and share your report.
+              </p>
+              <p class="govuk-body">You must complete both an:</p>
+              <ul class="govuk-list govuk-list--bullet">
+                <li>Effective Proposal Framework (EPF) 1 form</li>
+                <li>OASYS LEVEL 1 risk assessment</li>
+              </ul>
+              <p class="govuk-body">Depending on the complexity and nature of the case, you may also want to complete other relevant risk assessment tools such as Spousal Assault Risk Assessment (SARA) or seriousness and dangerousness assessments to get a better understanding of risk.
+              </p>
+              <a href="defendant-details" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+                Start now
+                <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+                  <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+                </svg>
+              </a>
+              <h2 class="govuk-heading-m">If you need help using the service </h2>
+              <p class="govuk-body"><a href="#" class="govuk-link">Contact learning and development</a> if you need help using this service.</p>
             </div>
           </div>
         </main>
       </div>
-    
-        DOS AND DONTS <BR>
-          BEFORE YOU FINISH THE REPORT <BR>
-            START REPORT BUTTON <BR>
-              HELP USING THIS SERVICE <BR>
     </main>
   </div>
 </div>
-
-
-
-
-
-
-
 {% endblock %}
