WIP preview page improvements
- update preview page
- tweaks to summary page

--- a/app/assets/sass/report-download__print.scss
+++ b/app/assets/sass/report-download__print.scss
@@ -58,7 +58,7 @@ table, figure, .govuk-grid-row{
 
 .govuk-table__header, .govuk-table__cell{
   padding:5px 10px 5px 0;
-  border: 0 none;
+  border: 1px solid #0b0c0c;
 }
 
 .govuk-table .govuk-table__body .govuk-table__row:last-of-type > *{
