--- a/app/views/18/pre-sentence-report/summary-page.html
+++ b/app/views/18/pre-sentence-report/summary-page.html
@@ -64,7 +64,7 @@
             <div class="govuk-grid-column-two-thirds">
               <div class="govuk-form-group">
                 <h2 class="govuk-label-wrapper">
-                  <label class="govuk-label govuk-label--l" for="proposed-sentence">
+                  <label class="govuk-label govuk-label--l" for="impact-of-offence">
                     Impact of offence
                   </label>
                 </h2>
