--- a/app/assets/sass/components/_report-preview.scss
+++ b/app/assets/sass/components/_report-preview.scss
@@ -42,6 +42,14 @@
         text-align: left;
         vertical-align: top;
       }
+
+      &.moj-report-page--table__border{
+        border:4px solid #888;
+
+        & td, th{
+          padding: 10px;
+        }
+      }
     }
 
     .moj-report-page__header{
